# crypto_backtest

./: .gitattributes  .gitignore  CLAUDE.md  CUDA_CPU_BUG_REPORT.md  README.md  pyproject.toml  temp
config/: default.yaml
docs/: CUDA_CPU_FIX_SUMMARY.md  CUDA_FIX_VERIFICATION.md  live_history_queries.md
docs/cuda_cpu_bug_analysis/: CUDA_CPU_ANALYSIS.md  CUDA_CPU_INVESTIGATION_SUMMARY.md  CUDA_CPU_ROOT_CAUSE.md  README.md  VERIFY_CUDA.md
docs/prd/: report-page-optimization.md
docs/superpowers/plans/: 2026-04-19-crypto-backtest.md  2026-04-19-parameter-optimization.md  2026-04-20-consecutive-reverse-strategy.md  2026-04-20-optimize-results-ui.md  (+6 more)
scripts/: check_wsl2_cuda.py  debug_cuda_cpu_diff.py  verify_cuda_cpu.py
src/backtest/: __init__.py  __main__.py  cuda_exchange.py  cuda_runner.py  data_feed.py  engine.py  exchange.py  live_connector.py  live_engine.py  live_exchange.py  live_feed.py  live_history.py  models.py  numba_simulate.py  optimizer.py  reporter.py  strategy.py
strategies/: consecutive_reverse.py  consecutive_reverse_martingale.py  example_ma_cross.py  portfolio_backtest.py  shadow_power.py  shadow_power_backtest.py  shadow_power_live.py
tests/: conftest.py  test_collector.py  test_consecutive_reverse.py  test_cuda_auto_runner.py  test_cuda_exchange.py  test_cuda_kernel.py  test_cuda_runner.py  test_data_feed.py  test_engine.py  test_exchange.py  test_live_connector.py  test_live_engine.py  test_live_exchange.py  test_live_feed.py  test_live_history.py  test_models.py  test_numba_simulate.py  test_optimizer.py  test_reporter.py  test_web.py
(+20 files in other folders)
