[project]
name = "crypto-backtest"
version = "0.1.0"
description = "USDT-margined perpetual futures backtesting engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
backtest = "backtest.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
